--- a/Assignment3.css
+++ b/Assignment3.css
@@ -65,10 +65,12 @@ body{
 #border7{
   background-color: white;
   margin-left: 300px;
-  margin-right: 300px;
+  width: 1282.5px;
   margin-top: 750px;
   border: 3px solid black;
   height: 150px;
+  margin-right: 300px;
+
 }
 
 #image1{
