--- a/Assignment3.css
+++ b/Assignment3.css
@@ -87,10 +87,19 @@ body{
 .F1{
   color: Red;
   font-weight: bold;
-  text-align: center;
   font-size: 35px;
   font: century;
   float: left;
   margin-left: 30px;
+  position: absolute;
+}
+
+.F2{
+  color: black;
+  font-size: 20px;
+  font: arial;
+  float: left;
+  margin-left: 30px;
+  margin-top: 100px;
   position: absolute;
 }
