--- a/Assignment3.css
+++ b/Assignment3.css
@@ -87,18 +87,18 @@ body{
   color: Red;
   font-weight: bold;
   font-size: 35px;
-  font: century;
   float: left;
   margin-left: 30px;
   position: absolute;
+  font-family: arial;
 }
 
 .F2{
   color: black;
   font-size: 20px;
-  font: arial;
   float: left;
   margin-left: 30px;
   margin-top: 100px;
   position: absolute;
+  font-family: arial;
 }
